Desafio 10 Login Por Formulario

--- a/Desafio10/src/views/bye.handlebars
+++ b/Desafio10/src/views/bye.handlebars
@@ -1,5 +1,5 @@
 <div class="container bg-light p-3 rounded">
-  <h2 class="text-primary">Hasta luego ${data}</h2>
+  <h2 class="text-primary">Hasta luego {{this.name}}</h2>
 </div>
 <script>
   setTimeout(function () {
