Desafio 10 Login Por Formulario

--- a/Desafio10/src/views/inicio.handlebars
+++ b/Desafio10/src/views/inicio.handlebars
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,7 +13,7 @@
 <body>
     <div class="row offset-md-3">
          <div class="alert alert-success p-3 d-flex justify-content-between">
-            <h2 class="text-success" style="display: inline" id="user"></h2>
+            <h2 class="text-success" style="display: inline" id="user">Bienvenid@ {{nombre}}</h2>
             <a class="btn btn-warning" href="/logout" >Deslogear</a>
           </div>
         <div class="col-md-6">
@@ -61,7 +61,7 @@
             <div class="mb-3" style="width: 50%;">
               <input type="text" class="form-control" placeholder="Avatar" name="Avatar" id="avatar" />
             </div>                               -->
-            <!-- <input type="text" class="form-control" name="mensaje" id="txtMessage" placeholder="Ingrese su Mensaje">
+            <input type="text" class="form-control" name="mensaje" id="txtMessage" placeholder="Ingrese su Mensaje">
             <button type="button"  class="btn btn-primary mt-2" id="SendChat">Enviar</button>
         </div>
         </div>
@@ -77,4 +77,4 @@
     <script src="index.js"></script>
 </body>
 
-</html> --> -->
+</html>
