--- a/Desafio10/src/views/bye.handlebars
+++ b/Desafio10/src/views/bye.handlebars
@@ -1,9 +1,8 @@
 <div class="container bg-light p-3 rounded">
-  <h2 class="text-primary">Hasta luego {{this.name}}</h2>
+  <h2 class="text-primary">Hasta luego {{nombre}}</h2>
 </div>
 <script>
   setTimeout(function () {
-     // after 5 seconds
-     window.location = "/";
-  }, 5000)
+     window.location = "login";
+  }, 2000)
 </script>
