Desafio 10 Login Por Formulario

--- a/Desafio10/src/views/login.handlebars
+++ b/Desafio10/src/views/login.handlebars
@@ -8,7 +8,7 @@
       <label for="title" class="form-label">Ingrese su nombre</label>
       <input type="text" class="form-control" name="name" />
     </div>
-    <button type="submit" class="btn btn-success">Enviar</button>
+    <button type="submit" class="btn btn-success" href="/inicio">Enviar</button>
   </form>
   <br />
 </div>
