--- a/Desafio10/src/views/inicio.handlebars
+++ b/Desafio10/src/views/inicio.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="/inicio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
@@ -60,7 +60,7 @@
             </div>    
             <div class="mb-3" style="width: 50%;">
               <input type="text" class="form-control" placeholder="Avatar" name="Avatar" id="avatar" />
-            </div>                               -->
+            </div>                              
             <input type="text" class="form-control" name="mensaje" id="txtMessage" placeholder="Ingrese su Mensaje">
             <button type="button"  class="btn btn-primary mt-2" id="SendChat">Enviar</button>
         </div>
