--- a/Desafio11/src/views/register.handlebars
+++ b/Desafio11/src/views/register.handlebars
@@ -14,8 +14,8 @@
 
       <div class="form-group">
         <input
-          id="nombre"
-          name="username"
+          id="name"
+          name="name"
           placeholder="nombre"
           class="form-control"
           type="text"
@@ -30,17 +30,6 @@
           placeholder="password"
           class="form-control"
           type="password"
-          required
-        />
-      </div>
-
-      <div class="form-group">
-        <input
-          id="direccion"
-          name="direccion"
-          placeholder="direccion"
-          class="form-control"
-          type="text"
           required
         />
       </div>
