Desafio 11 Inicio de Sesion

--- a/Desafio11/src/views/register.handlebars
+++ b/Desafio11/src/views/register.handlebars
@@ -14,8 +14,8 @@
 
       <div class="form-group">
         <input
-          id="name"
-          name="name"
+          id="username"
+          name="username"
           placeholder="nombre"
           class="form-control"
           type="text"
