--- a/Desafio11/src/views/login.handlebars
+++ b/Desafio11/src/views/login.handlebars
@@ -1,7 +1,7 @@
 
 <body>
    <br>
-<div class="container bg-light p-3 rounded">
+{{!-- <div class="container bg-light p-3 rounded">
   <h2 class="text-primary">Login de usuario</h2>
   <form action="login" method="post">
     <div class="mb-3">
@@ -11,8 +11,27 @@
     <button type="submit" class="btn btn-success" href="/inicio">Enviar</button>
   </form>
   <br />
-</div>
-</div>
+</div> --}}
+<div class="container mt-3">
+        <div class="jumbotron">
+            <h1>Login de Usuario</h1>
+            <br>
+            <form method="post" action="/login">
+                <div class="form-group">
+                    <label for="nombre">Ingrese su nombre</label>
+                    <input id="username" class="form-control" type="text" name="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="clave">Ingrese su contraseña</label>
+                    <input id="password" class="form-control" type="password" name="password" required>
+                </div>  
+                <button type="submit" class="btn btn-success" href="/inicio">Ingresar</button>              
+                {{!-- <button class="btn btn-success mt-3">Ingresar</button> --}}
+                <hr>
+                <a class="btn btn-success" href="/register" role="button">Ir a registro</a>
+            </form>
+        </div>
+    </div>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
         integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
