--- a/ProyectoFinal/src/public/hbs_views/signin.hbs
+++ b/ProyectoFinal/src/public/hbs_views/signin.hbs
@@ -4,6 +4,7 @@
     <input placeholder="Password" type="password" name="password" required>
     <input placeholder="Verify Password" type="password" name="verifiedPassword" required>
     <input placeholder="Name" type="text" name="name" required>
+    <input placeholder="Telephone" type="text" name="telephone" required>
     <input placeholder="Address" type="text" name="address" required>
     <input type="submit" value="SignIn">
 </form>
