--- a/ProyectoFinal/src/public/hbs_views/productsAndForm.hbs
+++ b/ProyectoFinal/src/public/hbs_views/productsAndForm.hbs
@@ -31,7 +31,7 @@
                 <td>{{this.description}}</td>
                 <td><img style="width: 50px; height:50px" src={{this.thumbnail}}></td>
                 <td>
-                    <form action="/carrito/{{this.id}}" method="POST">
+                    <form action="/cart/{{this.id}}" method="POST">
                         <input type="number" name="quantity" placeholder="Items Quantity">
                         <input type="submit" value="Add To Cart">
                     </form>
