--- a/ProyectoFinal/src/public/hbs_views/updateProduct.hbs
+++ b/ProyectoFinal/src/public/hbs_views/updateProduct.hbs
@@ -1,13 +1,13 @@
-<form action="/productos">
+<form action="/products">
     <input type="submit" value="Products">
 </form>
-<form action="/carrito">
+<form action="/cart">
     <input type="submit" value="Cart">
 </form>
 <div>
     {{#if isAdmin}}
     <h1>Update Product</h1>
-    <form action="/productos/put/{{this.id}}" method="POST">
+    <form action="/products/put/{{this.id}}" method="POST">
         <input placeholder="Title" type="text" name="title" required>
         <input placeholder="Price" type="number" step="0.01" name="price" required>
         <input placeholder="Category" type="text" name="category" required> 
